// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Title component render component title with props 1`] = `
<h1
  className="title"
>
  Test props
</h1>
`;

exports[`Title component render component title without props 1`] = `
<h1
  className="title"
>
  Simple title
</h1>
`;
